kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: danielworkspace
  labels:
    app: fine-di-mondo
    environment: development
