kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: finedimondo-frontend
  namespace: danielworkspace
  labels:
    app: finedimondo-frontend
spec:
  type: NodePort
  selector:
    app: finedimondo-frontend
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
    protocol: TCP
    name: http
